# djangocms-static

./: .gitignore  MANIFEST.in  README.md  project.db  setup.cfg
djangocms_static/: admin.py  apps.py  cms_app.py  cms_toolbars.py  models.py  urls.py  views.py
djangocms_static/docs/: development.md
djangocms_static/migrations/: 0001_initial.py
djangocms_static/templates/: general_error.html  summary.html
mysite/: settings.py  urls.py
mysite/templates/: base.html
