[metadata]
name = djangocms-static
version = 0.1
description = A Django CMS add-on to create a static version of a site.
long_description = file: README.md
url = https://github.com/matteopolleschi/djangocms-static
author = Marc Compte
author_email = marc@compte.cat
license = BSD-3-Clause  # Example license
classifiers =
    Environment :: Web Environment
    Framework :: Django CMS :: 3.8
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Static Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.5
install_requires =
    django >= 2.0
    django-cms >= 3.8
    requests >= 2.25.1
